--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="header1 cid-rs1w6GdbNm" id="header16-1">
+<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="header1 cid-rs1w6GdbNm" id="header16-1">
 
     
 
@@ -634,7 +634,7 @@
                                 <div class="wrapper">
                                     <div class="top-line pb-3">
                                         <h4 class="card-title mbr-fonts-style display-5">OMEN 800 headset</h4>
-                                        <p class="mbr-text cost mbr-fonts-style m-0 display-5">R 330</p>
+                                        <p class="mbr-text cost mbr-fonts-style m-0 display-5">RM 330</p>
                                     </div>
                                     <div class="bottom-line">
                                         <p class="mbr-text mbr-fonts-style display-7">
