--- a/index.html
+++ b/index.html
@@ -39,27 +39,27 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
+                    <a href="https://sultangrand.mobirisesite.com/">
                          <img src="assets/images/sultan1-122x81.jpg" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.co">SULTAN GRAND</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://sultangrand.mobirisesite.com/">SULTAN GRAND</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-danger display-4" href="https://mobirise.co"><span class="mbri-desktop mbr-iconfont mbr-iconfont-btn"></span>
+                    <a class="nav-link link text-danger display-4" href="https://adhzim.github.io/waka1/"><span class="mbri-desktop mbr-iconfont mbr-iconfont-btn"></span>
                         PCs
                     </a>
-                </li><li class="nav-item"><a class="nav-link link text-danger display-4" href="https://mobirise.co"><span class="mbri-laptop mbr-iconfont mbr-iconfont-btn"></span>
+                </li><li class="nav-item"><a class="nav-link link text-danger display-4" href="https://adhzim.github.io/waka2/"><span class="mbri-laptop mbr-iconfont mbr-iconfont-btn"></span>
                         Laptops
-                    </a></li><li class="nav-item"><a class="nav-link link text-danger display-4" href="https://mobirise.co"><span class="mbri-shopping-basket mbr-iconfont mbr-iconfont-btn"></span>
+                    </a></li><li class="nav-item"><a class="nav-link link text-danger display-4" href="https://adhzim.github.io/waka3/"><span class="mbri-shopping-basket mbr-iconfont mbr-iconfont-btn"></span>
                         Accessories
-                    </a></li><li class="nav-item"><a class="nav-link link text-danger display-4" href="https://mobirise.co"><span class="mbri-sale mbr-iconfont mbr-iconfont-btn"></span>
+                    </a></li><li class="nav-item"><a class="nav-link link text-danger display-4" href="https://adhzim.github.io/waka4/"><span class="mbri-sale mbr-iconfont mbr-iconfont-btn"></span>
                         Deals
                     </a></li>
                 <li class="nav-item">
-                    <a class="nav-link link text-danger display-4" href="https://mobirise.co">
+                    <a class="nav-link link text-danger display-4" href="https://adhzim.github.io/waka5/">
                         <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         About Us
                     </a>
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="header1 cid-rs1w6GdbNm" id="header16-1">
+<section class="engine"><a href="https://mobirise.info/i">website creation software</a></section><section class="header1 cid-rs1w6GdbNm" id="header16-1">
 
     
 
@@ -118,8 +118,8 @@
                             <div class="col-12 col-md-10">
                                 <div class="wrapper">
                                     <div class="top-line pb-3">
-                                        <h4 class="card-title mbr-fonts-style display-5">HP Slimline desktop PC
-<div><br></div></h4>
+                                        <h4 class="card-title mbr-fonts-style display-5"><a href="https://flamboyant-kilby-c51ae2.netlify.com">HP Slimline desktop PC
+</a><div><br></div></h4>
                                         <p class="mbr-text cost mbr-fonts-style m-0 display-5">
                                             RM 3765 
                                         </p>
@@ -149,8 +149,8 @@
                             <div class="col-12 col-md-10">
                                 <div class="wrapper">
                                     <div class="top-line pb-3">
-                                        <h4 class="card-title mbr-fonts-style display-5">HP Pavilion 590 desktop PC
-</h4>
+                                        <h4 class="card-title mbr-fonts-style display-5"><a href="https://flamboyant-kilby-c51ae2.netlify.com">HP Pavilion 590 desktop PC
+</a></h4>
                                         <p class="mbr-text cost mbr-fonts-style m-0 display-5">
                                             RM 3359
                                         </p>
@@ -179,8 +179,8 @@
                             <div class="col-12 col-md-10">
                                 <div class="wrapper">
                                     <div class="top-line pb-3">
-                                        <h4 class="card-title mbr-fonts-style display-5">HP ENVY curved AiO desktop
-</h4>
+                                        <h4 class="card-title mbr-fonts-style display-5"><a href="https://flamboyant-kilby-c51ae2.netlify.com">HP ENVY curved AiO desktop
+</a></h4>
                                         <p class="mbr-text cost mbr-fonts-style m-0 display-5">RM 8365
 <br>
 <br></p>
@@ -234,8 +234,8 @@
                             <div class="col-12 col-md-10">
                                 <div class="wrapper">
                                     <div class="top-line pb-3">
-                                        <h4 class="card-title mbr-fonts-style display-5">HP 22-inch AiO desktop
-</h4>
+                                        <h4 class="card-title mbr-fonts-style display-5"><a href="https://flamboyant-kilby-c51ae2.netlify.com">HP 22-inch AiO desktop
+</a></h4>
                                         <p class="mbr-text cost mbr-fonts-style m-0 display-5">
                                             RM 2549</p>
                                     </div>
@@ -264,7 +264,7 @@
                             <div class="col-12 col-md-10">
                                 <div class="wrapper">
                                     <div class="top-line pb-3">
-                                        <h4 class="card-title mbr-fonts-style display-5">HP Pavilion 27-inch AiO desktop</h4>
+                                        <h4 class="card-title mbr-fonts-style display-5"><a href="https://flamboyant-kilby-c51ae2.netlify.com">HP Pavilion 27-inch AiO desktop</a></h4>
                                         <p class="mbr-text cost mbr-fonts-style m-0 display-5">
                                             RM 5000
                                         </p>
@@ -294,7 +294,7 @@
                             <div class="col-12 col-md-10">
                                 <div class="wrapper">
                                     <div class="top-line pb-3">
-                                        <h4 class="card-title mbr-fonts-style display-5">HP Pavilion gaming desktop</h4>
+                                        <h4 class="card-title mbr-fonts-style display-5"><a href="https://flamboyant-kilby-c51ae2.netlify.com">HP Pavilion gaming desktop</a></h4>
                                         <p class="mbr-text cost mbr-fonts-style m-0 display-5">
                                             RM 4949
                                         </p>
@@ -348,7 +348,7 @@
                             <div class="col-12 col-md-10">
                                 <div class="wrapper">
                                     <div class="top-line pb-3">
-                                        <h4 class="card-title mbr-fonts-style display-5">HP Envy 13t</h4>
+                                        <h4 class="card-title mbr-fonts-style display-5"><a href="https://flamboyant-kilby-c51ae2.netlify.com">HP Envy 13t</a></h4>
                                         <p class="mbr-text cost mbr-fonts-style m-0 display-5">
                                             RM 3199
                                         </p>
@@ -378,7 +378,7 @@
                             <div class="col-12 col-md-10">
                                 <div class="wrapper">
                                     <div class="top-line pb-3">
-                                        <h4 class="card-title mbr-fonts-style display-5">HP Spectre x360 (13-inch 2019)</h4>
+                                        <h4 class="card-title mbr-fonts-style display-5"><a href="https://flamboyant-kilby-c51ae2.netlify.com">HP Spectre x360 (13-inch 2019)</a></h4>
                                         <p class="mbr-text cost mbr-fonts-style m-0 display-5">
                                             RM 4999
                                         </p>
@@ -408,7 +408,7 @@
                             <div class="col-12 col-md-10">
                                 <div class="wrapper">
                                     <div class="top-line pb-3">
-                                        <h4 class="card-title mbr-fonts-style display-5">HP Spectre Folio</h4>
+                                        <h4 class="card-title mbr-fonts-style display-5"><a href="https://flamboyant-kilby-c51ae2.netlify.com">HP Spectre Folio</a></h4>
                                         <p class="mbr-text cost mbr-fonts-style m-0 display-5">
                                             RM 5435
                                         </p>
@@ -462,7 +462,7 @@
                             <div class="col-12 col-md-10">
                                 <div class="wrapper">
                                     <div class="top-line pb-3">
-                                        <h4 class="card-title mbr-fonts-style display-5">HP Spectre x360 (15-inch, 2019)</h4>
+                                        <h4 class="card-title mbr-fonts-style display-5"><a href="https://flamboyant-kilby-c51ae2.netlify.com">HP Spectre x360 (15-inch, 2019)</a></h4>
                                         <p class="mbr-text cost mbr-fonts-style m-0 display-5">
                                             RM 6000
                                         </p>
@@ -492,7 +492,7 @@
                             <div class="col-12 col-md-10">
                                 <div class="wrapper">
                                     <div class="top-line pb-3">
-                                        <h4 class="card-title mbr-fonts-style display-5">HP Chromebook x2</h4>
+                                        <h4 class="card-title mbr-fonts-style display-5"><a href="https://flamboyant-kilby-c51ae2.netlify.com">HP Chromebook x2</a></h4>
                                         <p class="mbr-text cost mbr-fonts-style m-0 display-5">
                                             RM 2500
                                         </p>
@@ -522,8 +522,8 @@
                             <div class="col-12 col-md-10">
                                 <div class="wrapper">
                                     <div class="top-line pb-3">
-                                        <h4 class="card-title mbr-fonts-style display-5">HP Omen 17
-</h4>
+                                        <h4 class="card-title mbr-fonts-style display-5"><a href="https://flamboyant-kilby-c51ae2.netlify.com">HP Omen 17
+</a></h4>
                                         <p class="mbr-text cost mbr-fonts-style m-0 display-5">
                                             RM 4999
                                         </p>
@@ -577,7 +577,7 @@
                             <div class="col-12 col-md-10">
                                 <div class="wrapper">
                                     <div class="top-line pb-3">
-                                        <h4 class="card-title mbr-fonts-style display-5">HP Pavilion Gaming Mouse 300</h4>
+                                        <h4 class="card-title mbr-fonts-style display-5"><a href="https://flamboyant-kilby-c51ae2.netlify.com">HP Pavilion Gaming Mouse 300</a></h4>
                                         <p class="mbr-text cost mbr-fonts-style m-0 display-5">RM 119</p>
                                     </div>
                                     <div class="bottom-line">
@@ -606,7 +606,7 @@
                             <div class="col-12 col-md-10">
                                 <div class="wrapper">
                                     <div class="top-line pb-3">
-                                        <h4 class="card-title mbr-fonts-style display-5">HP K300</h4>
+                                        <h4 class="card-title mbr-fonts-style display-5"><a href="https://flamboyant-kilby-c51ae2.netlify.com">HP K300</a></h4>
                                         <p class="mbr-text cost mbr-fonts-style m-0 display-5">
                                             RM 60</p>
                                     </div>
@@ -633,7 +633,7 @@
                             <div class="col-12 col-md-10">
                                 <div class="wrapper">
                                     <div class="top-line pb-3">
-                                        <h4 class="card-title mbr-fonts-style display-5">OMEN 800 headset</h4>
+                                        <h4 class="card-title mbr-fonts-style display-5"><a href="https://flamboyant-kilby-c51ae2.netlify.com">OMEN 800 headset</a></h4>
                                         <p class="mbr-text cost mbr-fonts-style m-0 display-5">RM 330</p>
                                     </div>
                                     <div class="bottom-line">
